--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="./src/style.css">
+  <title>Farm Website</title>
 </head>
+
 <body>
-  
+
+  <main>
+    <div class="left-column">
+      <div class="top-row">
+        TOP ROW
+      </div>
+      <div class="bottom-row">
+        <div class="left-col">
+          LEFT COL
+        </div>
+        <div class="right-col">
+          RIGHT COL
+        </div>
+      </div>
+    </div>
+    <div class="right-column">
+      <div class="right-top-row">
+        RIGHT TOP ROW
+      </div>
+      <div class="right-bottom-row">
+        RIGHT BOTTOM ROW
+      </div>
+    </div>
+    
+  </main>
+
+  <footer>
+    <div class="footer-1">FOOTER ONE</div>
+    <div class="footer-2">FOOTER TWO</div>
+    <div class="footer-3">FOOTER THREE</div>
+  </footer>
+
 </body>
 </html>
