finished left column, top row (started bottom rows)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./src/style.css">
   <title>Farm Website</title>
 </head>
@@ -12,11 +14,23 @@
   <main>
     <div class="left-column">
       <div class="top-row">
-        TOP ROW
+        <div class="intro-text"><strong>Vegetables</strong> <span class="date">July 2019 Crop</span> <button>▽</button> </div>
+        <div>
+          <div class="veg"><div class="veg-emoji">🍅</div><div class="weight">32</div>Ton</div>
+          <div class="veg"><div class="veg-emoji">🍆</div><div class="weight">8</div>Ton</div>
+          <div class="veg"><div class="veg-emoji">🥬</div><div class="weight">21</div>Ton</div>
+          <div class="veg"><div class="veg-emoji">🥔</div><div class="weight">18</div>Ton</div>
+          <div class="veg"><div class="veg-emoji">🌽</div><div class="weight">12</div>Ton</div>
+          <div class="veg"><div class="veg-emoji">🌶</div><div class="weight">5</div>Ton</div>
+          <div class="veg"><div class="veg-emoji">🥦</div><div class="weight">5</div>Ton</div>
+          <div class="all"> <span>All</span> <button>...</button> </div>
+        </div>
       </div>
       <div class="bottom-row">
         <div class="left-col">
-          LEFT COL
+          <h2>Farm Camping</h2>
+          <p>We offer a unique camping experience on our farm in the heart of Jenin.</p>
+          <img src="#" alt="tent">
         </div>
         <div class="right-col">
           RIGHT COL
