--- a/index.html
+++ b/index.html
@@ -29,11 +29,35 @@
       <div class="bottom-row">
         <div class="left-col">
           <h2>Farm Camping</h2>
-          <p>We offer a unique camping experience on our farm in the heart of Jenin.</p>
-          <img src="#" alt="tent">
+          <p>We offer a unique camping experience on <br> our farm in the heart of Jenin.</p>
+          <img src="./img/tent.png" alt="tent">
         </div>
         <div class="right-col">
-          RIGHT COL
+          <h2>Statistics</h2> <Button>▷</Button>
+          <div class="water-stats">
+            <div class="emoji">💧</div>
+            <div class="stat-name">
+              <div class="big-stat-name">Water</div>
+              <div class="small-stat-name">galon</div>
+            </div>
+            <div class="stat-number">250</div>
+          </div>
+          <div class="tractor-stats">
+            <div class="emoji">🚜</div>
+            <div class="stat-name">
+              <div class="big-stat-name">Tractor</div>
+              <div class="small-stat-name">units</div>
+            </div>
+            <div class="stat-number">50</div>
+          </div>
+          <div class="forest-stats">
+            <div class="emoji">🌳</div>
+            <div class="stat-name">
+              <div class="big-stat-name">Forest</div>
+              <div class="small-stat-name">forest</div>
+            </div>
+            <div class="stat-number">2</div>
+          </div>
         </div>
       </div>
     </div>
