finished right column, top row, started bottom row

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
   <main>
+
     <div class="left-column">
       <div class="top-row">
         <div class="intro-text"><strong>Vegetables</strong> <span class="date">July 2019 Crop</span> <button>▽</button> </div>
@@ -61,10 +62,17 @@
         </div>
       </div>
     </div>
+
     <div class="right-column">
       <div class="right-top-row">
-        RIGHT TOP ROW
+        <div class="left-co">
+          <strong>Corn</strong><br>Season
+        </div>
+        <div class="right-co">
+          <img src="./img/flower.png" alt="flower">
+        </div>
       </div>
+
       <div class="right-bottom-row">
         RIGHT BOTTOM ROW
       </div>
