finished right column

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="bottom-row">
         <div class="left-col">
           <h2>Farm Camping</h2>
-          <p>We offer a unique camping experience on <br> our farm in the heart of Jenin.</p>
+          <p>We offer a unique camping experience <br> on our farm in the heart of Jenin.</p>
           <img src="./img/tent.png" alt="tent">
         </div>
         <div class="right-col">
@@ -69,12 +69,25 @@
           <strong>Corn</strong><br>Season
         </div>
         <div class="right-co">
+          
+          <div class="square"></div>
+          <div class="circle"></div>
           <img src="./img/flower.png" alt="flower">
         </div>
       </div>
 
       <div class="right-bottom-row">
-        RIGHT BOTTOM ROW
+        <div class="top-ro">
+          <h2>
+            Animal Husbandry
+          </h2>
+          <p>
+            Explore our raising <br> of livestock.
+          </p>
+        </div>
+        <div class="bottom-ro">
+          <img src="./img/cow.png" alt="cow">
+        </div>
       </div>
     </div>
     
