--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-
+  <div class="square-1"></div>
+  <div class="square-2"></div>
   <main>
 
     <div class="left-column">
@@ -69,7 +70,6 @@
           <strong>Corn</strong><br>Season
         </div>
         <div class="right-co">
-          
           <div class="square"></div>
           <div class="circle"></div>
           <img src="./img/flower.png" alt="flower">
@@ -94,9 +94,24 @@
   </main>
 
   <footer>
-    <div class="footer-1">FOOTER ONE</div>
-    <div class="footer-2">FOOTER TWO</div>
-    <div class="footer-3">FOOTER THREE</div>
+    <div class="footer-1">
+      <img src="./img/icon.png" alt="barn">
+    </div>
+    <div class="footer-2">
+      <p>
+        Abu Ali Farm
+      </p>
+    </div>
+    <div class="footer-3">
+      <button class="home-button">Home</button>
+      <img src="./img/icons.png" alt="icons">
+    </div>
+    <div class="footer-4">
+      <p>
+        Seham Kharazz
+      </p>
+      <img src="./img/woman.png" alt="woman">
+    </div>
   </footer>
 
 </body>
